@@ -6,7 +6,7 @@ copyright_year   = 2012
 version          = 2.11
 
 [@Author::Plicease]
-:version = 2.26
+:version = 2.38
 release_tests = 1
 
 [RemovePrereqs]
@@ -25,22 +25,24 @@ Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.14
 Alien::automake                                = 0.14
 Alien::Autotools                               = 1.04
-Alien::Base::ModuleBuild                       = 1.06
-Alien::bison                                   = 0.19
-Alien::Build                                   = 1.69
-Alien::Build::Git                              = 0.07
+Alien::Base::ModuleBuild                       = 1.08
+Alien::bison                                   = 0.20
+Alien::Build                                   = 1.93
+Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.05
-Alien::Build::Plugin::Decode::SourceForge      = 0.01
-Alien::Build::Plugin::Download::GitHub         = 0.03
+Alien::Build::Plugin::Decode::SourceForge      = 0.02
+Alien::Build::Plugin::Download::GitHub         = 0.05
 Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
-Alien::Build::Plugin::Probe::Override          = 0.01
+Alien::Build::Plugin::Probe::Override          = 0.02
 Alien::Build::Plugin::Fetch::Prompt            = 0.59
 Alien::Build::Plugin::Fetch::Rewrite           = 0.02
+Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.11
-Alien::cmake3                                  = 0.04
+Alien::cmake3                                  = 0.05
 Alien::curl                                    = 0.06
 Alien::Editline                                = 0.08
+Alien::Expat                                   = 0.01
 Alien::FFI                                     = 0.23
 Alien::flex                                    = 0.12
 Alien::gmake                                   = 0.21
@@ -48,20 +50,20 @@ Alien::GMP                                     = 1.14
 Alien::gzip                                    = 0.05
 Alien::Hunspell                                = 0.11
 Alien::Libarchive3                             = 0.29
-Alien::Libbz2                                  = 0.23
-Alien::Librdkafka                              = 1.01
-Alien::LibreSSL                                = 0.02
+Alien::Libbz2                                  = 0.24
+Alien::Librdkafka                              = 1.02
+Alien::LibreSSL                                = 0.03
 Alien::libuuid                                 = 0.02
 Alien::libtool                                 = 0.12
 Alien::LibYAML                                 = 2.05
-Alien::Libxml2                                 = 0.09
+Alien::Libxml2                                 = 0.11
 Alien::LZO                                     = 0.02
 Alien::m4                                      = 0.17
 Alien::MSYS                                    = 0.09
 Alien::MSYS2                                   = 0.02
-Alien::nasm                                    = 0.20
+Alien::nasm                                    = 0.22
 Alien::Nettle                                  = 0.04
-Alien::nragent                                 = 0.05
+Alien::nragent                                 = 0.06
 Alien::patch                                   = 0.14
 Alien::pkgconf                                 = 0.15
 Alien::Role::Alt                               = 0.05
@@ -89,47 +91,51 @@ Archive::Ar::Libarchive                        = 2.07
 Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0901
 Archive::Libarchive::XS                        = 0.0902
-Class::Inspector                               = 1.34
+Browser::Start                                 = 0.01
+Class::Inspector                               = 1.36
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.28
+Dist::Zilla::Plugin::AlienBuild                = 0.29
 Dist::Zilla::Plugin::Alt                       = 0.07
-Dist::Zilla::Plugin::Author::Plicease          = 2.36
+Dist::Zilla::Plugin::Author::Plicease          = 2.38
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::FFI                       = 1.03
+Dist::Zilla::Plugin::FFI                       = 1.04
 Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
-Dist::Zilla::Plugin::OurPkgVersion             = 0.15
+Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.36
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.38
 Env::ShellWords                                = 0.02
-FFI                                            = 1.14
-FFI::CheckLib                                  = 0.24
+Exception::Class::DBI                          = 1.04
+FFI                                            = 1.15
+FFI::CheckLib                                  = 0.25
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.87
+FFI::Platypus                                  = 1.02
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.10
 FFI::Platypus::Lang::Pascal                    = 0.06
-FFI::Platypus::Lang::Rust                      = 0.05
+FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
+FFI::Platypus::Record::StringArray             = 0.01
 FFI::Platypus::Type::StringArray               = 0.02
-FFI::TinyCC                                    = 0.28
+FFI::TinyCC                                    = 0.29
 FFI::TinyCC::Inline                            = 0.28
 FFI::Util                                      = 0.17
 File::LibMagic::FFI                            = 0.04
-File::Listing::Ftpcopy                         = 0.08
+File::Listing::Ftpcopy                         = 0.09
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.23
-Kafka::Librd                                   = 0.10
+Kafka::Librd                                   = 0.14
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
-Module::Build::FFI                             = 0.49
+Module::Build::FFI                             = 0.52
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.60
-NewRelic::Agent::FFI                           = 0.08
+NewRelic::Agent::FFI                           = 0.09
+Perl::Critic::Plicease                         = 0.03
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.23026
@@ -137,20 +143,20 @@ PkgConfig::LibPkgConf                          = 0.10
 Shell::Config::Generate                        = 0.33
 Shell::Guess                                   = 0.09
 String::Template                               = 0.21
-Term::Clui                                     = 1.75
+Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
-Test::Alien::CPP                               = 0.99
+Test::Alien::CPP                               = 1.02
 Test::CChecker                                 = 0.10
 Test::Exec                                     = 0.04
 Test::Fixme                                    = 0.16
 Test::Script                                   = 1.25
 Test::Version                                  = 2.09
-Test2::Plugin::FauxHomeDir                     = 0.04
+Test2::Plugin::FauxHomeDir                     = 0.05
 Test2::Tools::FFI                              = 0.05
 Test2::Tools::HTTP                             = 0.09
 Test2::Tools::HTTP::UA::Mojo                   = 0.04
 Test2::Tools::JSON::Pointer                    = 0.02
-Test2::Tools::URL                              = 0.04
+Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
